# Head

# 0.2.6 - 2013 January 30th

- implemented the ROW() function (so long as it can be replaced at runtime)
- implemented the COLUMN() function without arguments

# 0.2.5 - 2013 January 13th

- named_references_to_keep and named_references_that_can_be_set_at_runtime can now be passed a block which will be called with each named reference. Returning true will make the named reference kept / settable

# 0.2.4 - 2013 January 13th

- Now checks whether sheet names and named references provided by the user actually exist, and if not, aborts

# 0.2.3 - 2013 January 4th

- Implemented the LOWER function in ruby
- Removed the run_in_memory option, it no longer does anything.
- Remmoved the intermediate_directory option, the code no longer needs to write intermediate files

# 0.2.2 - 2013 December 29th

- Moved the excel function tests out of the C runtime and into a separate file
- Moved the reset() function into the C runtime out of the generated code
- Changed the generated tests to use minitest, now it is part of the Ruby library
- Removed the ZenTest dependency
- Changed the C runtime to avoid the big static arrays, and instead malloc the amount of memory actually needed

# 0.2.1 - 2013 December 22nd

- Fixed a bug when named references are specified as well as cells to keep and named reference points to blanks

# 0.2.0 - 2013 December 20th

- A lot of changes: no longer generates intermediate files, hopefully faster, but perhaps not
- Uses Ox instead of Nokogiri to parse worksheets, and does the parsing in one pass.
- Fixed a bug in the ruby version of vlookup and hlookup that would downcase strings passed as arguments in certain situations

# 0.1.23 - 2013 December 4th

- Implemented the RIGHT function in ruby

# 0.1.22 - 2013 December 4th

- Fixed a bug in = and != when comparing a string with a non string
- Implemented the LEN function in ruby
- Implemented the SUBSTITUTE function in ruby

# 0.1.21 - 2013 November 19th
